Resize headers to prevent line-wrapping

--- a/app/assets/stylesheets/leads.scss
+++ b/app/assets/stylesheets/leads.scss
@@ -5,3 +5,8 @@
 div.btn.btn-link {
   padding: 0px;
 }
+
+.table td,
+.table th {
+  padding: 0.5rem !important;
+}
